--- a/2019/2019-04/2019-04-12_2/source/300x250_m.css
+++ b/2019/2019-04/2019-04-12_2/source/300x250_m.css
@@ -762,6 +762,51 @@
   }
 }
 
+
+/*-- shine --*/
+@-webkit-keyframes shine {
+  0% {
+    visibility: visible;
+    -webkit-transform:translateX(-100%);
+  }
+  50% {
+    visibility: visible;
+    -webkit-transform:translateX(100%);
+  }
+  100% {
+    visibility: visible;
+    -webkit-transform:translateX(-100%);
+  }
+}
+@-moz-keyframes shine {
+  0% {
+    visibility: visible;
+    -moz-transform:translateX(-100%);
+  }
+  50% {
+    visibility: visible;
+    -moz-transform:translateX(100%);
+  }
+  100% {
+    visibility: visible;
+    -moz-transform:translateX(-100%);
+  }
+}
+@keyframes shine {
+  0% {
+    visibility: visible;
+    transform:translateX(-100%);
+  }
+  50% {
+    visibility: visible;
+    transform:translateX(100%);
+  }
+  100% {
+    visibility: visible;
+    transform:translateX(-100%);
+  }
+}
+
 /*-------------------------------------------*/
 * {
   -webkit-box-sizing: border-box;
@@ -877,6 +922,23 @@
   left: 61px;
   overflow: hidden; 
 }
+.cta-container:after {
+  content:'';
+  top:0;
+  transform:translateX(100%);
+  width:100%;
+  height:100%;
+  position: absolute;
+  z-index:1;
+   
+  background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(128,186,232,0) 99%, rgba(125,185,232,0) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(50%,rgba(255,255,255,0.8)), color-stop(99%,rgba(128,186,232,0)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* IE10+ */
+  background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
+}
 
 .frame.animation .logo {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -893,10 +955,10 @@
   -moz-animation: slideInUp 0.5s ease-in-out 1s forwards;
   animation: slideInUp 0.5s ease-in-out 1s forwards;
 }
-.frame.animation .cta-container {
-  -webkit-animation: zoomInOut 0.5s ease-in-out 1.5s forwards;
-  -moz-animation: zoomInOut 0.5s ease-in-out 1.5s forwards;
-  animation: zoomInOut 0.5s ease-in-out 1.5s forwards;
+.frame.animation .cta-container:after {
+  -webkit-animation: shine 1.5s ease-in-out 1.75s;
+  -moz-animation: shine 1.5s ease-in-out 1.75s;
+  animation: shine 1.5s ease-in-out 1.75s;
 }
 .frame.animation {
   -webkit-animation: fadeOut 0.75s ease-in-out 3s forwards;
